<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <EditText
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="0dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/Default_porcentaje"
        android:id="@+id/Porcentaje1"
        android:focusable="false"
        android:gravity="center"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="0dp"
        android:text="@string/Simbolo_porcentaje"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/SimboloPorcentaje1"
        android:layout_toRightOf="@+id/Porcentaje1"
        android:layout_toEndOf="@+id/Porcentaje1"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="0dp"
        android:hint="@string/Descripcion_editar_corte"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/Nota1"
        android:layout_toRightOf="@+id/SimboloPorcentaje1"
        android:layout_toEndOf="@+id/SimboloPorcentaje1"
        android:gravity="center"
        android:focusable="false"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="5dp"
        android:text="@string/Default_nota"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/NotaPromediada1"
        android:layout_toRightOf="@+id/Nota1"
        android:layout_toEndOf="@+id/Nota1"/>

    <EditText
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="0dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/Default_porcentaje"
        android:id="@+id/Porcentaje2"
        android:focusable="false"
        android:gravity="center"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:layout_marginLeft="0dp"
        android:text="@string/Simbolo_porcentaje"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/SimboloPorcentaje2"
        android:layout_toRightOf="@+id/Porcentaje2"
        android:layout_toEndOf="@+id/Porcentaje2"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="0dp"
        android:hint="@string/Descripcion_editar_corte"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/Nota2"
        android:layout_toRightOf="@+id/SimboloPorcentaje2"
        android:layout_toEndOf="@+id/SimboloPorcentaje2"
        android:gravity="center"
        android:focusable="false"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:layout_marginLeft="5dp"
        android:text="@string/Default_nota"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/NotaPromediada2"
        android:layout_toRightOf="@+id/Nota2"
        android:layout_toEndOf="@+id/Nota2"/>

    <EditText
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="0dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/Default_porcentaje"
        android:id="@+id/Porcentaje3"
        android:focusable="false"
        android:gravity="center"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:layout_marginLeft="0dp"
        android:text="@string/Simbolo_porcentaje"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/SimboloPorcentaje3"
        android:layout_toRightOf="@+id/Porcentaje3"
        android:layout_toEndOf="@+id/Porcentaje3"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="0dp"
        android:hint="@string/Descripcion_editar_corte"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/Nota3"
        android:layout_toRightOf="@+id/SimboloPorcentaje3"
        android:layout_toEndOf="@+id/SimboloPorcentaje3"
        android:gravity="center"
        android:focusable="false"/>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="165dp"
        android:layout_marginLeft="5dp"
        android:text="@string/Default_nota"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/NotaPromediada3"
        android:layout_toRightOf="@+id/Nota3"
        android:layout_toEndOf="@+id/Nota3"/>
</RelativeLayout>